<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checked="true"
            android:icon="@mipmap/ic_match"
            android:title="@string/menu_matches" />

        <item
            android:id="@+id/nav_login"
            android:checked="true"
            android:icon="@mipmap/ic_power"
            android:title="@string/menu_login" />


        <item
            android:id="@+id/nav_notices"
            android:checked="true"
            android:icon="@mipmap/ic_notice"
            android:title="@string/menu_news" />

    </group>
<!--

    <group  android:id="@+id/grp2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wintowin"
            android:icon="@mipmap/ic_wintowin_intence"
            android:title="@string/menu_wintowin_intense" />
    </group>
    -->

</menu>
