<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/scrollView1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <!-- Contact Site - Name-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/ic_person"
                        android:drawableStart="@mipmap/ic_person"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:hint="@string/name"
                        android:inputType="textPersonName"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

             <!--Contact Site - apPaterno(lastnames)-->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastNames"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtLastNames"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/ic_person"
                        android:drawableStart="@mipmap/ic_person"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:hint="@string/lastnames"
                        android:inputType="textPersonName"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <!-- Cliente  - Town
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/town"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtTown"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/ic_person"
                        android:drawableStart="@mipmap/ic_person"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:hint="@string/town"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>
           -->

             <!-- Cliente  - Email -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/ic_mail"
                        android:drawableStart="@mipmap/ic_mail"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:hint="email"/>
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <!-- Cliente  - Psw -->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/psw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/txtPsw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/ic_lock_open"
                        android:drawableStart="@mipmap/ic_lock_open"
                        android:drawablePadding="4dp"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/btnUpdate"
                android:clickable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:background="@drawable/ripple_button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/lblUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="Actualizar"
                    android:textColor="@color/md_white_1000"

                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="5dp" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
